--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@formatjs/intl-pluralrules": "^5.1.4",
     "@formatjs/intl-relativetimeformat": "^11.1.4",
     "@fortawesome/fontawesome-free": "^6.2.0",
+    "@mui/icons-material": "^5.10.14",
+    "@mui/material": "^5.10.14",
     "@popperjs/core": "^2.11.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -27,11 +31,13 @@
     "nouislider": "^15.6.1",
     "object-path": "^0.11.8",
     "path": "^0.12.7",
+    "plotly.js": "^2.16.3",
     "prism-react-renderer": "^1.3.5",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.29.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.6.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
@@ -39,6 +45,7 @@
     "react-helmet": "^6.1.0",
     "react-inlinesvg": "^3.0.1",
     "react-intl": "^6.2.1",
+    "react-plotly.js": "^2.6.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
@@ -77,7 +84,9 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/react-plotly.js": "^2.5.2",
     "@types/react-table": "^7.7.12"
   }
 }
